--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,14 +3,34 @@
 <html>
 <head>
 	<title>My HCI Friends</title>	
-	<meta charset="utf-8">
+	<meta name = "viewport" content = "width=device-width, intial-scale=1.0">
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
 	
 </head>
 
+<div class="container">
 <body>
 	<h1>My HCI Friends</h1>
 
+		{{#each friends}}
+			<div class="friends">
+				<img src="{{imageURL}}" class="img-responsive"/>
+				<a href=# class="clicker">
+					<h3>{{name}}</h3>
+				</a>				
+				<p>{{description}}</p>
+			</div>
+		{{/each}}
+				
+
+	</div>
+
+
+
 	<form id="addFriendForm" role="form" method="get" action="/add">
+
 		<h3>Add a friend</h3>
 	    <div class="form-group">
 	      <label for="name">Name:</label>
@@ -23,4 +43,10 @@
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
 </body>
+</div>
+
+<script src="js/jquery-1.11.0.js"></script>
+<script src="js/bootstrap.js"></script>
+<script src="js/hci-friends.js"></script>
+
 </html>
